  language in case a LilyPond document uses a language different than
  "nederlands" but does not specify it (issue #20).
- add the -l, --language option as shorthand for setting the default language
- properly support drum notes in ly.lex and ly.music
- updated scheme variables in ly.data.scheme* functions for LilyPond 2.18
- MusicXML export improvements:
  - support for isolated durations (a single duration without
    explicit pitch)
  - support for implicit starting pitch in relative mode
    (issues #18 and wbsoft/frescobaldi#648)


2015-03-08: python-ly 0.9.1

- updated LilyPond data to 2.18


2015-03-07: python-ly 0.9
- added ly.rests containing various rest manipulations
- robust Python 3 support, Python 3 is now recommended, although 2.7 will
  still be supported for the foreseeable future.
- don't yield the duration in a \tuplet command as a music token (issue
  wbsoft/frescobaldi#631)
- a script `xml-export.ily` has been included to dump the music structure
  inside LilyPond to an XML file. This is not used yet, but could be used in the
  future to use LilyPond to parse files and build music, and then export it
  to other formats.
- MusicXML export improvements


2015-01-24: python-ly 0.8
- fix (allbeit experimental) musicxml export
- basic api documentation included


2015-01-23: python-ly 0.7
- first release as an officially separate project from Frescobaldi
- add INSTALL.md to source distribution


2015-01-23: python-ly 0.6
- node and slexer are no longer toplevel modules; only the ly package


2015-01-21: python-ly 0.5
- large MusicXML export improvements, contributed by Peter Bjuhr (MusicXML
  export is still experimental)
- handle german pitch names asas and heses correctly when writing those
- don't transpose chord argument of \stringTuning command
- Python3 robustness improvements


2014-03-05: python-ly 0.4
- fix transposing when alterations would be more than a double sharp or double